@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.2,v 1.1.2.18 2001/08/16 17:03:05 tv Exp $
+#	$NetBSD: CHANGES-1.5.2,v 1.1.2.19 2001/08/16 17:09:05 tv Exp $
 
 A complete list of changes from NetBSD 1.5.1 to NetBSD 1.5.2:
 
@@ -235,3 +235,7 @@ sbin/disklabel/disklabel.c			1.97
 share/man/man9/lock.9				1.4-1.8
 
   Correct several semantic and descriptive errors.
+
+libexec/telnetd/termstat.c			1.9-1.10
+
+  Add missing parentheses; fixes PR bin/13612.
